--- a/tests/files/config.ini
+++ b/tests/files/config.ini
@@ -3,7 +3,7 @@ host=192.168.99.100
 port=5672
 backend=queue_managers.rabbit.BlockingPikaManager
 user=guest
-pass=guest
+password=guest
 
 [persistence]
 host=192.168.99.100
