--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ python:
  - "2.7"
 before_script:
  - sleep 15
+services:
+  - rabbitmq
+  - mongodb
 install: "pip install -r testing_requirements.txt && pip install -r requirements.txt"
 script:
  - find . -name "*.py" -exec pep8 {} \;
